--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,5 +12,5 @@
     <item
         android:id="@+id/account"
         android:icon="@drawable/ic_person"
-        android:title="@string/accaunt" />
+        android:title="@string/account" />
 </menu>
