--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -8,4 +8,12 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/roboto_condensed_medium</item>
     </style>
+    <style name="CustomNavigationBarActiveIndicator">
+        <item name="android:background">@drawable/bottom_nav_active_indicator</item>
+    </style>
+
+    <style name="RoundedIndicator" parent="ShapeAppearance.Material3.SmallComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
