--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,6 +22,10 @@
         android:textColor="@color/white"
         android:textSize="30sp" />
 
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="8dp" />
+
     <!-- Email Label -->
     <TextView
         android:layout_width="wrap_content"
@@ -36,6 +41,7 @@
 
     <!-- Email Input -->
     <EditText
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="16dp"
@@ -61,6 +67,7 @@
 
     <!-- Password Input -->
     <EditText
+        android:id="@+id/passwordd"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="24dp"
@@ -73,6 +80,7 @@
 
     <!-- Login Button -->
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/loginBtn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="16dp"
@@ -81,7 +89,8 @@
         android:text="@string/login"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:backgroundTint="@color/button_tint_selector" />
 
     <!-- Registration & Forgot Password Links -->
     <LinearLayout
@@ -129,6 +138,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/vk_btn"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
@@ -139,6 +149,7 @@
             android:layout_height="wrap_content" />
 
         <ImageView
+            android:id="@+id/ok_btn"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
